<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jeu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".PrincipaleActivite">


    <TextView
        android:id="@+id/gravity"
        android:layout_width="302dp"
        android:layout_height="52dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/bienvenu"
        android:textStyle="bold"
        android:textColor="@color/noir"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btCommencer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <Button
        android:id="@+id/btCommencer"
        android:layout_width="138dp"
        android:layout_height="51dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/bg_vide"
        android:text="@string/commencer"
        android:textStyle="bold"
        android:textColor="@color/noir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btAbout"
        android:layout_width="138dp"
        android:layout_height="51dp"
        android:background="@drawable/bg_vide"
        android:text="@string/a_propos"
        android:textStyle="bold"
        android:textColor="@color/noir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCommencer" />

</android.support.constraint.ConstraintLayout>