<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="10dp"
    android:background="@drawable/background2">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btRetourPpAide"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/retour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/marron_claire"
            android:padding="5dp"
            android:text="@string/aide"
            android:textColor="@color/noir"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/commentDeplacer"
                android:background="@color/marron_foncee"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/noir" />
            <TextView
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:background="@color/marron_claire"
                android:text="@string/txtFaireUnDeplacementDD"
                android:textSize="12dp"
                android:textColor="@color/noir" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/deplacer_dd1"
                    />
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/deplacer_dd2"
                    android:layout_marginLeft="30dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:background="@color/marron_claire"
                android:text="@string/txtFaireUnDeplacementC"
                android:textSize="12dp"
                android:textColor="@color/noir" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/deplacer_c1"
                    />
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/deplacer_c2"
                    android:layout_marginLeft="30dp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/commentFairePrise"
                android:background="@color/marron_foncee"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/noir" />

            <TextView
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:background="@color/marron_claire"
                android:text="@string/txtPriseDD"
                android:textSize="12dp"
                android:textColor="@color/noir" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/prise_dd1"
                    />
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/prise_dd2"
                    android:layout_marginLeft="30dp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:background="@color/marron_claire"
                android:text="@string/txtPriseC"
                android:textSize="12dp"
                android:textColor="@color/noir" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/prise_c1"
                    />
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/prise_c2"
                    android:layout_marginLeft="30dp"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/marron_claire"
                android:text="@string/txtDivers"
                android:textSize="12dp"
                android:textColor="@color/noir" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>