<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="@drawable/bg_popup"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/marron_foncee"
        android:layout_gravity="center"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/langue"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/noir"
            android:id="@+id/titreLangue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/marron_claire"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/noir"
                android:background="@color/marron_foncee"
                android:text="@string/francais"
                android:textSize="20dp"
                android:id="@+id/btLangueFrancais"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/noir"
                android:background="@drawable/francais"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:background="@color/marron_claire"
            android:padding="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/noir"
                android:background="@color/marron_claire"
                android:text="@string/anglais"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/btLangueAnglais"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/noir"
                android:background="@drawable/anglais"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>